# mucp-algorithms-web

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: Examples of input data types and structures.txt  MUCP_Algorithm_Manual.docx  pseudo code.docx
docs/flow diagrams - deprecated/: MUCP algorithms_draft.odg
examples/: example_run.py
examples/example_case_files/: MUCP_support_data_user_input.xlsx
mucp_algorithms/: __init__.py  data_reader.py  data_validators.py  support_data_reader.py  support_validators.py
mucp_algorithms/algorithms/: __init__.py  compartment_cost.py  compartment_density.py  compartment_flow.py  compartment_person_days.py  compartment_priority.py
